Revert "LPS-113405 Wrap with bdi tag avoiding issues with special characters and use the text-truncase clay css class"
This reverts commit 6b6df8ae524e50c8026e9abe81c28a5078c3952b.

--- a/modules/apps/redirect/redirect-web/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/redirect/redirect-web/src/main/resources/META-INF/resources/css/main.scss
@@ -42,7 +42,11 @@
 		text-transform: uppercase;
 	}
 
-	.text-truncate-reverse {
+	.table-cell-expand {
 		direction: rtl;
+		overflow: hidden;
+		text-align: left;
+		text-overflow: ellipsis;
+		white-space: nowrap;
 	}
 }
